--- a/app/views/tickets/_ticket.html.erb
+++ b/app/views/tickets/_ticket.html.erb
@@ -1,7 +1,10 @@
 <div class="row">
   <div class="col-md-12">
     <h3 class="ticket-title"><%= ticket.customer_code %></h3>
-    <p>Status: <span class="ticket-details" ><%= ticket.status_code %></span> Needed On: <span class="ticket-details" ><%= ticket.date_needed.to_s %></span></p>
+    <p>
+      Status: <span class="ticket-details" ><%= ticket.status_code %></span> 
+      Needed On: <span class="ticket-details" ><%= ticket.date_needed.strftime('%A').to_s %> (<%= ticket.date_needed.to_s %>)</span>
+    </p>
       <% ticket.ticket_changes.each do |change| %>
         <%= render change %>
       <% end %>
