--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,5 @@
-<% @list.list_changes.each do |change| %>
-  <%= render change %>
+<% @list.warnings.each do |warning| %>
+  <%= render warning %>
 <% end %>
 <% @tickets.each do |ticket| %>
   <%= render ticket %>
