remove wwhisper, add basic auth

--- a/app/views/lines/_line.html.erb
+++ b/app/views/lines/_line.html.erb
@@ -8,5 +8,8 @@
   <% line.warnings.each do |warning| %>
     <%= render warning %>
   <% end %>
+  <% line.item.warnings.each do |warning| %>
+    <%= render warning %>
+  <% end %>
 </div>
     
