--- a/app/views/warnings/_warning.html.erb
+++ b/app/views/warnings/_warning.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-11 col-md-offset-1">
     <p class="warning"><%= warning.description %></p>
   </div>
 </div>
