added order num to ticket view

--- a/app/views/lines/_line.html.erb
+++ b/app/views/lines/_line.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-md-1">
+  <div class="col-xs-1">
     <p><%= line.quantity.to_s %> <%= line.uom %></p>
   </div>
-  <div class="col-md-11">
+  <div class="col-xs-11">
     <p><%= line.description %></p>
   </div>
   <% line.warnings.each do |warning| %>
