added a by-lines option for picking, some jquery to make it easier to clean up a print, and frozen highlighting

--- a/app/assets/stylesheets/warnings.scss
+++ b/app/assets/stylesheets/warnings.scss
@@ -5,5 +5,9 @@ body {
   .warning {
     font-weight: bold;
     color: #a50000;
+    a, a:hover {
+      color: #a50000;
+      background-color: transparent;
+    }
   }
 }
