--- a/app/views/warnings/_warning.html.erb
+++ b/app/views/warnings/_warning.html.erb
@@ -1,5 +1,10 @@
-<div class="row">
-  <div class="col-md-11 col-md-offset-1">
-    <p class="warning"><%= warning.description %></p>
+<div class="row warning" id="warning-<%= warning.id %>">
+  <div class="col-md-12">
+    <p>
+      <%= warning.description %> 
+      <span class="delete-button">
+        <a href="javascript:void(0)">( Delete )</a>
+      </span>
+    </p>
   </div>
 </div>
