added a menu item

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,6 +21,7 @@
             <li><%= link_to "All Tickets", root_path %></li>
             <li><%= link_to "Today's Tickets", today_path %></li>
             <li><%= link_to "Tomorrow's Tickets", tomorrow_path %></li>
+            <li><%= link_to "Tomorrow's Lines for Picking", tomorrow_lines_path %></li>
           </ul>
         </li>
       </ul>
