--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Refresh", refresh_path %></li>
         <li><%= link_to "Clear Warnings", clear_warnings_path %></li>
+        <li><%= link_to "Search Stock", new_search_path %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Display <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
